EFE-23, fixed some bugs, fixed vertical spacing issues.

--- a/.modules/frontend/public/stylesheets/account_settings.less
+++ b/.modules/frontend/public/stylesheets/account_settings.less
@@ -61,7 +61,10 @@
   }
 }
 
-
+.setting-val {
+  margin-top: 5px;
+  padding-bottom: 5px;
+}
 
 a.row-settings:hover {
   background-color: @tableBackgroundHover;
